Fixing missing navigation

--- a/lib/presenters/page.mustache
+++ b/lib/presenters/page.mustache
@@ -15,9 +15,9 @@
     <nav>
     <!-- semantic version instead? -->
     <ul>
-      {{#navigation}}
+      {{#navigation_items}}
       <li> <a href="{{ url }}"> {{ name }} </a> </li>
-      {{/navigation}}
+      {{/navigation_items}}
     </ul>
     </nav>
     </header>
